<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.programacionmoviles.juanpabloarangoa.calculadora.MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:cursorVisible="true"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:inputType="number"
            android:textColor="@color/black"
            android:id="@+id/editor"
            android:layout_weight="100"
            />
        <Button
            android:id="@+id/bClear"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/darkgreen"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:text="@string/CA"
            android:textSize="25sp"
            android:onClick="buttonClear"
            />
    </LinearLayout>
    <TableLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TableRow
            android:layout_weight="1">
            <Button
                android:background="@color/darkgreen"
                android:layout_margin="2dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:text="@string/one"
                android:textSize="25sp"
                android:id="@+id/bOne"
                android:onClick="buttonNumber"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/darkgreen"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:text="@string/two"
                android:textSize="25sp"
                android:id="@+id/bTwo"
                android:onClick="buttonNumber"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/darkgreen"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:text="@string/three"
                android:textSize="25sp"
                android:id="@+id/bThree"
                android:onClick="buttonNumber"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/darkgreen"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:text="@string/plus"
                android:textSize="25sp"
                android:id="@+id/bPlus"
                android:onClick="buttonOperation"
                />
        </TableRow>

        <TableRow
            android:layout_weight="1">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/darkgreen"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:text="@string/four"
                android:textSize="25sp"
                android:id="@+id/bFour"
                android:onClick="buttonNumber"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/darkgreen"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:text="@string/five"
                android:textSize="25sp"
                android:id="@+id/bFive"
                android:onClick="buttonNumber"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/darkgreen"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:text="@string/six"
                android:textSize="25sp"
                android:id="@+id/bSix"
                android:onClick="buttonNumber"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/darkgreen"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:text="@string/minus"
                android:textSize="25sp"
                android:id="@+id/bMinus"
                android:onClick="buttonOperation"
                />
        </TableRow>

        <TableRow
            android:layout_weight="1">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/darkgreen"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:text="@string/seven"
                android:textSize="25sp"
                android:id="@+id/bSeven"
                android:onClick="buttonNumber"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/darkgreen"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:text="@string/eight"
                android:textSize="25sp"
                android:id="@+id/bEight"
                android:onClick="buttonNumber"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/darkgreen"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:text="@string/nine"
                android:textSize="25sp"
                android:id="@+id/bNine"
                android:onClick="buttonNumber"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/darkgreen"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:text="@string/multi"
                android:textSize="25sp"
                android:id="@+id/bMulti"
                android:onClick="buttonOperation"
                />
        </TableRow>

        <TableRow
            android:layout_weight="1">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/darkgreen"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:text="@string/dot"
                android:textSize="25sp"
                android:id="@+id/bDot"
                android:onClick="buttonDot"
                />

            <Button
                android:id="@+id/bZero"
                android:layout_width="99dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/darkgreen"
                android:layout_margin="2dp"
                android:onClick="buttonNumber"
                android:text="@string/zero"
                android:textSize="25sp"
                android:textAllCaps="false" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/darkgreen"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:text="@string/equal"
                android:textSize="25sp"
                android:id="@+id/bEqual"
                android:onClick="buttonEqual"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:background="@color/darkgreen"
                android:layout_margin="2dp"
                android:text="@string/div"
                android:textSize="25sp"
                android:id="@+id/bDiv"
                android:onClick="buttonOperation"
                />
        </TableRow>


    </TableLayout>


</LinearLayout>
